Fixed issue on mobile where the height of each project was bigger than the viewport given by the browser

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -29,6 +29,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  height: 100%;
   transition: 1.5s ease-in-out transform;
 }
 
