--- a/src/project.module.scss
+++ b/src/project.module.scss
@@ -1,7 +1,7 @@
 .project {
   position: relative;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   color: white;
   background: #282A36;
 
